<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信语音</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="normal_test"></string>
    <string name="tv_prompt">点击请说话</string>
    <string name="start_record">语音已开启，请说话…</string>
    <string name="start_init">正在初始化， 请稍等…</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="wordbg">提示文字的背景</string>
    <string name="mic">mic</string>
    <string name="return_btn">return_btn</string>
    <string name="bt_play">播放</string>
    <string name="bt_pause">暂停</string>
    <string name="bt_stop">停止</string>
    <string name="reco">语音识别</string>
    <string name="tts">语音合成</string>
    <string name="list">词表识别</string>
    <string name="grammar">ABNF语法识别</string>
    <string name="recoui">语音识别-带UI</string>
    <string name="upload">上传</string>
    <string name="et_words">点击开始说话</string>
    <string name="syn_start">合成</string>
    <string name="hint1">当前网络不可用</string>
    <string name="hint2">离线服务请走</string>
    <string name="hint3">商务流程</string>
    <string name="res">识别结果：</string>
    <string name="right_arrow">></string>
    <string name="logo">logo</string>

</resources>
